--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="form-container">
+    <p class="heading">Personal Details</p>
 <app-dynamic-form-container [allFormFields]="allFormFields"></app-dynamic-form-container>
 </div>
