--- a/src/app/dynamic-form-container/app-fields/app-fields.component.html
+++ b/src/app/dynamic-form-container/app-fields/app-fields.component.html
@@ -19,8 +19,7 @@
       [id]="fields.label"
       [formControlName]="fields.label"
       [type]="fields.type"
-      (change)="onChangeCheckbox()"
-      [checked]="fields.value === true"
+      (change)="onCheckboxChange($event)"
         />
     </div>
     <div class="fields">
