--- a/src/app/dynamic-form-container/app-fields/app-fields.component.html
+++ b/src/app/dynamic-form-container/app-fields/app-fields.component.html
@@ -1,26 +1,27 @@
 <div class="form-details" [formGroup]="form">
   <label class="sub-heading" for="fields.label">{{ fields.label }}</label>
   <div [ngSwitch]="fields.type">
-    <div class="fields">
+    <div class="fields" *ngIf="fields.isVisible == true">
       <input
         *ngSwitchCase="'textbox'"
         [formControlName]="fields.label"
         [type]="fields.type"
       />
     </div>
-    <div class="fields" *ngSwitchCase="'textarea'">
+    <div class="fields" *ngIf="fields.isVisible == true">
       <textarea
+        *ngSwitchCase="'textarea'"
         [formControlName]="fields.label"
       ></textarea>
     </div>
-    <div class="fields">
+    <div class="fields" *ngIf="fields.isVisible == true">
       <input
-      *ngSwitchCase="'checkbox'"
-      [id]="fields.label"
-      [formControlName]="fields.label"
-      [type]="fields.type"
-      (change)="onCheckboxChange($event)"
-        />
+        *ngSwitchCase="'checkbox'"
+        [id]="fields.label"
+        [formControlName]="fields.label"
+        [type]="fields.type"
+        (change)="onCheckboxChange($event)"
+      />
     </div>
     <div class="fields">
       <input
@@ -29,7 +30,7 @@
         [type]="fields.type"
       />
     </div>
-    <div class="fields">
+    <div class="fields" *ngIf="fields.isVisible == true">
       <input
         *ngSwitchCase="'text'"
         [formControlName]="fields.label"
@@ -45,19 +46,39 @@
         </select>
       </div>
     </div>
-    <div class="fields">
+    <div class="fields" *ngIf="fields.isVisible == true">
       <div *ngSwitchCase="'range'">
         <input
           type="range"
           [formControlName]="fields.label"
           [min]="fields.options[0]"
-          [max]="fields.options[1]"      />
-        <span *ngIf="form.get(fields.label)?.value !== null">{{ form.get(fields.label)?.value + "cm" }}</span>
+          [max]="fields.options[1]"
+        />
+        <span *ngIf="form.get(fields.label)?.value !== null">{{
+          form.get(fields.label)?.value + "cm"
+        }}</span>
       </div>
     </div>
-    <p class="error" *ngIf="(!form.get(fields.label)?.value || form.get(fields.label)?.value === false ) && form.get(fields.label)?.touched && fields.hint">
-      {{fields.hint}}
+    <p
+      class="error"
+      *ngIf="
+        (!form.get(fields.label)?.value ||
+          form.get(fields.label)?.value === false) &&
+        form.get(fields.label)?.touched &&
+        fields.hint
+      "
+    >
+      {{ fields.hint }}
     </p>
-    <p class="error" *ngIf="fields.isRequired && form.get(fields.label)?.invalid && form.get(fields.label)?.touched ">{{fields.errorMessage}}</p>
+    <p
+      class="error"
+      *ngIf="
+        fields.isRequired &&
+        form.get(fields.label)?.invalid &&
+        form.get(fields.label)?.touched
+      "
+    >
+      {{ fields.errorMessage }}
+    </p>
   </div>
 </div>
